# erreur

./: .gitignore  Cargo.toml  README.fr.md  README.md  README.zh.md
examples/: eager_catch.rs  full_catch.rs  ifnone.rs  lazy_catch.rs
src/: lib.rs
